--- a/_includes/table_of_contents.html
+++ b/_includes/table_of_contents.html
@@ -40,29 +40,52 @@
     </div>
 
     <div class="marginless-col col s12 hide-on-med-and-up show-on-small">
-      <ul class="collapsible" data-collapsible="accordion">
+      <ul class="collapsible collapsible-toc" data-collapsible="accordion">
 
+        {% assign i = 1 %}
         {% for chapter in chapter_titles %}
-          {% if forloop.first == true %}
-            <li>
-              <div class="collapsible-header active">{{ chapter[0] | capitalize }}</div>
-              <div class="collapsible-body"></div>
-            </li>
+          {% if chapter[0] == 'profiles and interviews' %}
+              {% assign i = i | minus: 1 %}
           {% else %}
             <li>
-              <div class="collapsible-header">{{ chapter[0] | capitalize }}</div>
-              <div class="collapsible-body"></div>
+              <div class="collapsible-header toc-title">{{ chapter[0] | capitalize }}</div>
+                {% for abstracts in chapter %}
+                  {% if forloop.first == false %}
+                   {% for abstract in abstracts %}
+                    <div class="collapsible-body">
+                        {% include marginless_card_panel.html %}
+                    </div>
+                    {% endfor %}
+                  {% endif %}
+                {% endfor %}
             </li>
           {% endif %}
+          {% assign i = i | plus: i %}
         {% endfor %}
             <li>
-              <div class="collapsible-header">Profiles/Interviews</div>
-              <div class="collapsible-body"></div>
+              <div class="collapsible-header toc-title">Profiles/Interviews</div>
+              <div class="collapsible-body">
+                {% for chapter in chapter_titles %}
+                {% if chapter[0] == 'profiles and interviews' %}
+                {% for abstracts in chapter %}
+                  {% if forloop.first == false %}
+                    {% for abstract in abstracts %}
+                      {% include marginless_card_panel.html %}
+<!--                         <p>{{ abstract.title }}</p>
+                        <p>{{ abstract.author }}</p>
+                        <p>{{ abstract.content | strip_html | truncatewords: 20 }}
+                        </p> -->
+                    {% endfor %}
+                  {% endif %}
+                {% endfor %}
+                {% endif %}
+                {% endfor %}
+              </div>
             </li>
       </ul>
     </div>
 
-    <div class="marginless-col col s12 m8 l9 height-fix hid-on-small-and-down" id="toc-content-wrapper">
+    <div class="marginless-col col s12 m8 l9 height-fix hide-on-small-and-down" id="toc-content-wrapper">
       <div class="toc-content height-fix" id="toc-content">
 
         {% for chapter in site.categories %}
