--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <div class="container post-container">
 <br>
-<a href="{{ site.baseurl }}/#table-of-contents" class="waves-effect waves-cyan btn-large darken-2">Back</a>
+<a href="{{ site.baseurl }}/#table-of-contents" class="waves-effect waves-cyan btn-large cyan darken-2">Back</a>
   <header class="post-header">
     <span class="post-title">{{ page.title }}</span>
     <p class="post-meta">{% if page.author %}{{ page.author }}{% endif %}{% if page.supervisors %}<br>under the supervision of {{ page.supervisors }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
@@ -14,5 +14,5 @@ layout: default
   </article>
 
 
-<a href="{{ site.baseurl }}/#table-of-contents" class="waves-effect waves-cyan btn-large darken-2">Back</a>
+<a href="{{ site.baseurl }}/#table-of-contents" class="waves-effect waves-cyan btn-large cyan darken-2">Back</a>
 </div>
