--- a/_includes/head.html
+++ b/_includes/head.html
@@ -21,7 +21,9 @@
   <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>-->
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0"/>
+  <meta content="width=device-width; initial-scale=1.0; maximum-scale=2.0; user-scalable=1;" name="viewport">
+  <meta name="viewport" content="user-scalable=YES"/>
+
   <title>RUCS - Review of Undergraduate Computer Science</title>
 
   <!-- CSS  -->
