--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,14 +4,9 @@
 <nav class="cyan darken-2" role="navigation">
   {% endif %}
   <div class="nav-wrapper container"><a id="logo-container" href="{{ site.baseurl }}/" class="brand-logo">{{site.title}}</a>
-    <ul class="right hide-on-med-and-down">
+    <ul class="right">
       <li><a href="{{ site.baseurl }}/issues">Issues</a></li>
     </ul>
-
-    <ul id="nav-mobile" class="side-nav">
-      <li><a href="{{ site.baseurl }}/issues">Issues</a></li>
-    </ul>
-    <a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
   </div>
 </nav>
 
