--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,20 +1,7 @@
   <footer class="page-footer">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
-        </div>
-        <div class="col l6 s12">
-          <h3 class="white-text">About <span class="brand-logo">RUCS</span></h3>
-          <p class="grey-text text-lighten-4">We are a team of college students working on this project like it's our full time job. Any amount would help support and continue development on this project and is greatly appreciated.</p>
-
-
-        </div>
-
-      </div>
-    </div>
-    <div class="footer-copyright">
-      <div class="container">
-      Made by <a class="cyan-text text-lighten-3" href="http://materializecss.com">Materialize</a>
+          <p class="grey-text text-lighten-4">RUCS is a non-archival publication featuring the best of undergraduate computer science research at the University of Toronto.</p>
       </div>
     </div>
   </footer>
