--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,25 +1,4 @@
 <head>
-  <!--<meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
-  <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
-  -->
-  <!--Import Google Icon Font-->
-  <!--<link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
-
-  <!-- CSS  -->
-  <!--
-  <link href="css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
-  <link href="css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>-->
-
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=YES" />
 
@@ -30,11 +9,18 @@
   <link href="{{ site.baseurl }}/css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection"/>
   <link href="{{ site.baseurl }}/css/style.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 
+  <!-- fonts -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
   <!-- For rendering custom CSS for individual pages -->
-  {% if page && page.css %}
+  {% if page && (page.css != "") %}
   <link href="{{ site.baseurl }}/css/abstracts/{{ page.css }}" type="text/css" rel="stylesheet" media="screen,projection" />
   {% endif %}
   
+  {% if page && page.layout == "post" %}
+  <link href="{{ site.baseurl }}/css/post.css" type="text/css" rel="stylesheet" media="screen,proejction" />
+  {% endif %}
+
   <!-- MathJax -->
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
