--- a/_includes/marginless_card_panel.html
+++ b/_includes/marginless_card_panel.html
@@ -1,14 +1,8 @@
-
-	<div class="marginless-card-panel-container">
+<div class="card cyan darken-2">
 	<a href='{{ site.baseurl }}{{ abstract.url }}' class="waves-effect waves-light">
-	<div class="marginless-card-panel">
-	
-	  <span class="title">{{ abstract.title }}</span><br/>
-	  <span class="author">{{ abstract.author }}</span><br/>
-	  <p class="preview">{{ abstract.content | strip_html | truncatewords: 20 }}
-	  </p>
-
-
+	<div class="card-content">
+			<span class="card-title">{{ abstract.title }}</span><br/><br/>
+	  		<span class="card-author">{{ abstract.author }}</span>
 	</div>
 	</a>
 </div>
