--- a/css/post.css
+++ b/css/post.css
@@ -8623,4 +8623,30 @@ figcaption {
 #down-arrow {
   align-self: flex-end; }
 
-/*# sourceMappingURL=style.css.map */
+table tr {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black; }
+  table tr td {
+    text-align: center; }
+
+ul {
+  padding-left: 40px !important; }
+  ul li {
+    list-style-type: disc !important; }
+
+.references p {
+  text-indent: -14px;
+  padding-left: 14px;
+  font-size: 0.9rem !important; }
+
+.appendix {
+  font-size: 0.9rem !important; }
+
+blockquote {
+  border-left: 0; }
+
+img {
+  margin-left: auto;
+  margin-right: auto; }
+
+/*# sourceMappingURL=post.css.map */
