Updates for mobile version

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,8 +17,8 @@
   <link href="{{ site.baseurl }}/css/abstracts/{{ page.css }}" type="text/css" rel="stylesheet" media="screen,projection" />
   {% endif %}
   
-  {% if page && page.layout == "post" %}
-  <link href="{{ site.baseurl }}/css/post.css" type="text/css" rel="stylesheet" media="screen,proejction" />
+  {% if page.layout == "post" %}
+  <link href="{{ site.baseurl }}/css/post.css" type="text/css" rel="stylesheet" media="screen,projection" />
   {% endif %}
 
   <!-- MathJax -->
