--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -139,7 +139,7 @@ figcaption {
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
 		border: solid 4px $primary-color;
-		width: 100%;
+		width: 95%;
 		margin: 0.5rem;
 	}
 
@@ -359,9 +359,7 @@ figcaption {
 #index-container {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-around;
-}
-
-#down-arrow {
-	align-self: flex-end;
+	align-items: center;
+	justify-content: center;
+	padding: auto;
 }
