--- a/css/style.css
+++ b/css/style.css
@@ -8440,7 +8440,7 @@ figcaption {
     -moz-box-sizing: border-box;
     -webkit-box-sizing: border-box;
     border: solid 4px #0097a7;
-    width: 100%;
+    width: 95%;
     margin: 0.5rem; }
 
   .post-container {
@@ -8618,9 +8618,8 @@ figcaption {
 #index-container {
   display: flex;
   flex-direction: column;
-  justify-content: space-around; }
-
-#down-arrow {
-  align-self: flex-end; }
+  align-items: center;
+  justify-content: center;
+  padding: auto; }
 
 /*# sourceMappingURL=style.css.map */
