--- a/_includes/marginless_card_panel.html
+++ b/_includes/marginless_card_panel.html
@@ -1,6 +1,6 @@
-<div class="card cyan darken-2">
-	<a href='{{ site.baseurl }}{{ abstract.url }}' class="waves-effect waves-light">
-	<div class="card-content">
+<div class="card valign-wrapper">
+	<a href='{{ site.baseurl }}{{ abstract.url }}'>
+	<div class="card-content valign">
 			<span class="card-title">{{ abstract.title }}</span><br/><br/>
 	  		<span class="card-author">{{ abstract.author }}</span>
 	</div>
