--- a/_sass/post.scss
+++ b/_sass/post.scss
@@ -18,15 +18,13 @@ ul {
 	padding-left: 40px !important;
 }
 
-.references {
-	p {
-		text-indent: -14px;
-		padding-left: 14px;
-		font-size: 0.9rem !important;
-	}
+.references p {
+	text-indent: -18px;
+	padding-left: 18px;
+	font-size: 0.9rem !important;
 }
 
-.appendix {
+.appendix, .acknowledgements {
 	font-size: 0.9rem !important;
 }
 
