--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
   <link href="{{ site.baseurl }}/css/abstracts/{{ page.css }}" type="text/css" rel="stylesheet" media="screen,projection" />
   {% endif %}
   
-  {% if page.layout == "post" %}
+  {% if page.layout == "default" %}
   <link href="{{ site.baseurl }}/css/post.css" type="text/css" rel="stylesheet" media="screen,projection" />
   {% endif %}
 
