--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 {% if page.url != "/index.html" %}
 
-<nav class="cyan darken-2" role="navigation">
+<nav class="header-background" role="navigation">
   <div class="nav-wrapper container"><a id="logo-container" href="{{ site.baseurl }}/" class="brand-logo">{{site.title}}</a>
   </div>
 </nav>
