--- a/_layouts/no_header.html
+++ b/_layouts/no_header.html
@@ -11,6 +11,7 @@
 
     <!--  Scripts-->
     <script src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
     <script src="{{ site.baseurl }}/js/materialize.js"></script>
     <script src="{{ site.baseurl }}/js/init.js"></script>
     <script src="{{ site.baseurl }}/js/index.js"></script>
