--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -360,7 +360,7 @@ figcaption {
 	position: absolute;
 	bottom: 0;
 	width: inherit;
-	margin: 0 auto 100px auto;
+	margin: 0 auto 5% auto;
 }
 
 .page-footer {
