--- a/css/post.css
+++ b/css/post.css
@@ -8618,7 +8618,7 @@ figcaption {
   position: absolute;
   bottom: 0;
   width: inherit;
-  margin: 0 auto 100px auto; }
+  margin: 0 auto 5% auto; }
 
 .page-footer {
   margin: 0px !important;
