--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -379,6 +379,17 @@ figcaption {
 	padding: 0px 10px;
 }
 
-#enter-button {
-	background-color: rgba(0, 150, 150, 0.2) !important;
+.transparent-section {
+	height: 100vh;
+	width: 100vw;
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+.review-subtitle-container {
+	position: absolute;
+	bottom: 25%;
+	width: inherit;
+	margin: auto;
 }
