--- a/css/style.css
+++ b/css/style.css
@@ -8633,7 +8633,17 @@ figcaption {
   border: 0 !important;
   padding: 0px 10px; }
 
-#enter-button {
-  background-color: rgba(0, 150, 150, 0.2) !important; }
+.transparent-section {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  top: 0;
+  left: 0; }
+
+.review-subtitle-container {
+  position: absolute;
+  bottom: 25%;
+  width: inherit;
+  margin: auto; }
 
 /*# sourceMappingURL=style.css.map */
