--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -389,7 +389,7 @@ figcaption {
 
 .review-subtitle-container {
 	position: absolute;
-	bottom: 25%;
+	top: 55%;
 	width: inherit;
 	margin: auto;
 }
