Updated Letter From the Editor

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,12 @@
 <footer class="page-footer">
 	<div class="container">
-	  <p class="grey-text text-lighten-4">RUCS is a non-archival publication featuring the best of undergraduate computer science research at the University of Toronto.</p>
+		<div class="row">
+			<div class="col s12 m8 l9">
+		  		<p class="grey-text text-lighten-4">RUCS is a non-archival publication featuring the best of undergraduate computer science research at the University of Toronto.</p>
+			</div>
+			<div class="col s12 m4 l3 masthead-link">
+				<p><a href="{{ site.baseurl }}/masthead.html" class="white-text"><b>Masthead</b></a></p>
+			</div>
+		</div>
 	</div>
 </footer>
