--- a/_includes/table_of_contents.html
+++ b/_includes/table_of_contents.html
@@ -5,17 +5,15 @@
     <div class="marginless-col col m4 l3 hide-on-small-and-down">
       <div class="marginless-collection collection">
 
+        <a href="#letter-from-the-editor" class="chapter-active waves-effect waves-light collection-item">
+          <span class="toc-title">Letter From the Editor</span>
+        </a>
+
         {% assign i = 1 %}
 
         {% for chapter in chapter_titles %}
 
-        {% if forloop.first == true %}
-
-        <a href="#{{ chapter[0] | replace: ' ', '-'}}" class="chapter-active waves-effect waves-light collection-item">
-          <span class="toc-title">{{ chapter[0] | capitalize }}</span>
-        </a>
-
-        {% elsif chapter[0] == 'profiles and interviews'%}
+        {% if chapter[0] == 'profiles and interviews'%}
             {% assign i = i | minus: 1 %}
         {% else %}
 
@@ -38,7 +36,12 @@
 
     <div class="marginless-col col s12 hide-on-med-and-up show-on-small">
       <ul class="collapsible collapsible-toc" data-collapsible="accordion">
-
+        <li>
+          <div class="collapsible-header toc-title">Letter From the Editor</div>
+          <div class="collapsible-body">
+            {% include foreword.html %}
+          </div>
+        </li>
         {% assign i = 1 %}
         {% for chapter in chapter_titles %}
           {% if chapter[0] == 'profiles and interviews' %}
@@ -84,7 +87,9 @@
 
     <div class="marginless-col col s12 m8 l9 height-fix hide-on-small-and-down" id="toc-content-wrapper">
       <div class="toc-content height-fix" id="toc-content">
-
+        <div class="toc-chapter-content" id="letter-from-the-editor">
+          {% include foreword.html %}
+        </div>
         {% for chapter in site.categories %}
           <div class="toc-chapter-content" id="{{ chapter[0] | replace: ' ', '-' }}">
             {% for abstracts in chapter %}
