--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,10 +4,15 @@ layout: default
 
 <div class="container post-container">
 <br>
-<a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium cyan-text text-darken-2">keyboard_arrow_left</i></a>
+<a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium cyan-text text-darken-2 cyan-hover">keyboard_arrow_left</i></a>
   <header class="post-header">
     <span class="post-title">{{ page.title }}</span>
-    <p class="post-meta">{% if page.author %}{{ page.author }}{% endif %}{% if page.supervisors %}<br>under the supervision of {{ page.supervisors }}{% endif %}{% if page.meta %} • {{ page.meta }}{% endif %}</p>
+    {% if page.author %}<p class="post-author">{{ page.author }}</p>{% endif %}
+    
+    {% if page.supervisors %}
+    <p class="post-supervisors">under the supervision of {{ page.supervisors }}</p>{% endif %}
+
+    {% if page.meta %} • {{ page.meta }}{% endif %}
   </header>
 
   <article class="post-content">
@@ -15,5 +20,5 @@ layout: default
   </article>
 
 
-<a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium cyan-text text-darken-2">keyboard_arrow_left</i></a>
+<a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium cyan-text text-darken-2 cyan-hover">keyboard_arrow_left</i></a>
 </div>
