--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -165,16 +165,19 @@ figcaption {
 
 	h1 {
 		font-size: 2.92rem;
+		margin-top: 4.5rem !important;
 		}
 
 	h2 {
 		font-size: 2.28rem;
 	}
 	h3 {
-	  	font-size: 1.64rem; }
+	  	font-size: 1.64rem;
+	  	margin-top: 3rem !important; }
 
 	h4 {
-		font-size: 1.4rem; }
+		font-size: 1.4rem;
+		margin-top: 4.5rem !important; }
 
 	h5 {
 		font-size: 1rem; }
@@ -212,10 +215,13 @@ figcaption {
 		color: white;
 	}
 
-	h1 { font-size: 2.28rem; }
+	h1 { font-size: 2.28rem;
+	     margin-top: 4.5rem !important; }
 	h2 { font-size: 1.64rem; }
-	h3 { font-size: 1.5rem; }
-	h4 { font-size: 1.4rem; }
+	h3 { font-size: 1.5rem;
+	      margin-top: 3rem !important;}
+	h4 { font-size: 1.4rem;
+		 margin-top: 4.5rem !important; }
 	h5 { font-size: 1rem; }
 	h6 { font-size: 1rem; }
 
@@ -287,14 +293,23 @@ figcaption {
 	font-size: 3.56rem;
 }
 
-.post-meta {
+.post-author {
 	@extend .post-title;
-	font-size: 1.1em;
+	font-size: 18pt;
+	margin: 63px 0 0 0 !important;
+}
+
+.post-supervisors {
+	@extend .post-title;
+	font-size: 16pt;
+	font-style: italic;
+	margin: 10px 0 0 0 !important;
 }
 
 .post-content {
 	font-family: $post-font;
 	font-size: 1.1em;
+	margin-bottom: 40px;
 }
 
 .no-shadow {
@@ -359,6 +374,8 @@ figcaption {
 // 	align-items: center;
 // 	justify-content: space-around;
 // 	padding: auto;
+	position: relative;
+	bottom: 5%;
     margin: 0 auto;
 }
 
@@ -398,4 +415,28 @@ figcaption {
 	top: 55%;
 	width: inherit;
 	margin: auto;
+}
+
+#foreword p {
+	margin: 0.7em 0 0.7em 0;
+}
+
+#signature {
+	margin: 2em 0 2em 0 !important;
+}
+
+#down-arrow, .cyan-hover {
+	-webkit-transition: text-shadow 0.2s linear;
+    -moz-transition: text-shadow 0.2s linear;
+    -ms-transition: text-shadow 0.2s linear;
+    -o-transition: text-shadow 0.2s linear;
+    transition: text-shadow 0.2s linear;
+}
+
+#down-arrow:hover {
+	text-shadow: 0 0 10px white;
+}
+
+.cyan-hover:hover {
+	text-shadow: 0 0 10px $primary-color;
 }
