--- a/css/page/masthead.css
+++ b/css/page/masthead.css
@@ -1756,7 +1756,7 @@ dfn {
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari, and Chrome.
  */
-h1, .post-title, .post-meta {
+h1, .post-title, .post-author, .post-supervisors {
   font-size: 2em;
   margin: 0.67em 0; }
 
@@ -5444,14 +5444,14 @@ html {
     html {
       font-size: 15px; } }
 
-h1, .post-title, .post-meta, h2, h3, h4, h5, h6 {
+h1, .post-title, .post-author, .post-supervisors, h2, h3, h4, h5, h6 {
   font-weight: 400;
   line-height: 1.1; }
 
-h1 a, .post-title a, .post-meta a, h2 a, h3 a, h4 a, h5 a, h6 a {
+h1 a, .post-title a, .post-author a, .post-supervisors a, h2 a, h3 a, h4 a, h5 a, h6 a {
   font-weight: inherit; }
 
-h1, .post-title, .post-meta {
+h1, .post-title, .post-author, .post-supervisors {
   font-size: 4.2rem;
   line-height: 110%;
   margin: 2.1rem 0 1.68rem 0; }
@@ -6075,7 +6075,7 @@ a.waves-effect .waves-ripple {
   @media only screen and (max-width: 992px) {
     .modal {
       width: 80%; } }
-  .modal h1, .modal .post-title, .modal .post-meta, .modal h2, .modal h3, .modal h4 {
+  .modal h1, .modal .post-title, .modal .post-author, .modal .post-supervisors, .modal h2, .modal h3, .modal h4 {
     margin-top: 0; }
   .modal .modal-content {
     padding: 24px; }
@@ -8458,17 +8458,20 @@ figcaption {
     height: 646px;
     overflow: scroll !important; }
 
-  h1, .post-title, .post-meta {
-    font-size: 2.92rem; }
+  h1, .post-title, .post-author, .post-supervisors {
+    font-size: 2.92rem;
+    margin-top: 4.5rem !important; }
 
   h2 {
     font-size: 2.28rem; }
 
   h3 {
-    font-size: 1.64rem; }
+    font-size: 1.64rem;
+    margin-top: 3rem !important; }
 
   h4 {
-    font-size: 1.4rem; }
+    font-size: 1.4rem;
+    margin-top: 4.5rem !important; }
 
   h5 {
     font-size: 1rem; }
@@ -8499,17 +8502,20 @@ figcaption {
   .preview {
     color: white; }
 
-  h1, .post-title, .post-meta {
-    font-size: 2.28rem; }
+  h1, .post-title, .post-author, .post-supervisors {
+    font-size: 2.28rem;
+    margin-top: 4.5rem !important; }
 
   h2 {
     font-size: 1.64rem; }
 
   h3 {
-    font-size: 1.5rem; }
+    font-size: 1.5rem;
+    margin-top: 3rem !important; }
 
   h4 {
-    font-size: 1.4rem; }
+    font-size: 1.4rem;
+    margin-top: 4.5rem !important; }
 
   h5 {
     font-size: 1rem; }
@@ -8564,16 +8570,23 @@ figcaption {
   margin: 5rem 0 0 0;
   text-align: center; }
 
-.post-title, .post-meta {
+.post-title, .post-author, .post-supervisors {
   font-family: "CMU Serif";
   font-size: 3.56rem; }
 
-.post-meta {
-  font-size: 1.1em; }
+.post-author {
+  font-size: 18pt;
+  margin: 63px 0 0 0 !important; }
+
+.post-supervisors {
+  font-size: 16pt;
+  font-style: italic;
+  margin: 10px 0 0 0 !important; }
 
 .post-content {
   font-family: "CMU Serif";
-  font-size: 1.1em; }
+  font-size: 1.1em;
+  margin-bottom: 40px; }
 
 .no-shadow {
   box-shadow: 0 !important; }
@@ -8615,6 +8628,8 @@ figcaption {
   min-width: 100%; }
 
 #title-info {
+  position: relative;
+  bottom: 5%;
   margin: 0 auto; }
 
 .bottom {
@@ -8649,15 +8664,41 @@ figcaption {
   width: inherit;
   margin: auto; }
 
-table {
-  border-spacing: 10px; }
+#foreword p {
+  margin: 0.7em 0 0.7em 0; }
+
+#signature {
+  margin: 2em 0 2em 0 !important; }
+
+#down-arrow, .cyan-hover {
+  -webkit-transition: text-shadow 0.2s linear;
+  -moz-transition: text-shadow 0.2s linear;
+  -ms-transition: text-shadow 0.2s linear;
+  -o-transition: text-shadow 0.2s linear;
+  transition: text-shadow 0.2s linear; }
+
+#down-arrow:hover {
+  text-shadow: 0 0 10px white; }
+
+.cyan-hover:hover {
+  text-shadow: 0 0 10px #0097a7; }
+
+table tr {
+  border: 0px !important; }
   table tr td {
     text-align: left !important;
-    width: 50%; }
+    width: 50%;
+    padding: 15px 10px 15px 10px; }
   table tr td:first-child {
     font-weight: bold;
     text-align: right !important;
     vertical-align: top; }
+
+h1, .post-title, .post-author, .post-supervisors {
+  margin-top: auto !important; }
+
+.masthead-title {
+  margin-bottom: 0em; }
 
 .valign, .valign-wrapper {
   width: 100%; }
