--- a/css/style.css
+++ b/css/style.css
@@ -8575,11 +8575,11 @@ figcaption {
   font-size: 3.56rem; }
 
 .post-author {
-  font-size: 18pt;
-  margin: 63px 0 0 0 !important; }
+  font-size: 1.188em !important;
+  margin: 40px 0 0 0; }
 
 .post-supervisors {
-  font-size: 16pt;
+  font-size: 1em !important;
   font-style: italic;
   margin: 10px 0 0 0 !important; }
 
@@ -8613,7 +8613,7 @@ figcaption {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: stretch; }
+  align-content: center; }
 
 .parallax-container {
   height: 200px !important; }
