--- a/_sass/style.scss
+++ b/_sass/style.scss
@@ -147,6 +147,7 @@ figcaption {
 		-webkit-box-sizing: border-box;
 		border: 0;
 		width: 100%;
+		max-height: 50%;
 		background-color: $primary-color;
 	}
 
@@ -342,7 +343,7 @@ figcaption {
 	display: flex;
 	flex-direction: row;
 	flex-wrap: wrap;
-	align-content: center;
+	align-content: flex-start;
 }
 
 // .height-fix, #toc-content, #toc-content-wrapper {
