--- a/_sass/page/masthead.scss
+++ b/_sass/page/masthead.scss
@@ -1,6 +1,8 @@
 @import '../style';
 
 table {
+	margin-top: 20px !important;
+	border-top: 1px solid gray !important;
 
 	tr {
 		border: 0px !important;
