--- a/css/page/masthead.css
+++ b/css/page/masthead.css
@@ -8447,6 +8447,7 @@ figcaption {
     -webkit-box-sizing: border-box;
     border: 0;
     width: 100%;
+    max-height: 50%;
     background-color: #0097a7; }
 
   .post-container {
@@ -8575,11 +8576,11 @@ figcaption {
   font-size: 3.56rem; }
 
 .post-author {
-  font-size: 18pt;
-  margin: 63px 0 0 0 !important; }
+  font-size: 1.188em !important;
+  margin: 40px 0 0 0; }
 
 .post-supervisors {
-  font-size: 16pt;
+  font-size: 1em !important;
   font-style: italic;
   margin: 10px 0 0 0 !important; }
 
@@ -8613,7 +8614,7 @@ figcaption {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  align-content: stretch; }
+  align-content: flex-start; }
 
 .parallax-container {
   height: 200px !important; }
@@ -8683,16 +8684,19 @@ figcaption {
 .cyan-hover:hover {
   text-shadow: 0 0 10px #0097a7; }
 
-table tr {
-  border: 0px !important; }
-  table tr td {
-    text-align: left !important;
-    width: 50%;
-    padding: 15px 10px 15px 10px; }
-  table tr td:first-child {
-    font-weight: bold;
-    text-align: right !important;
-    vertical-align: top; }
+table {
+  margin-top: 20px !important;
+  border-top: 1px solid gray !important; }
+  table tr {
+    border: 0px !important; }
+    table tr td {
+      text-align: left !important;
+      width: 50%;
+      padding: 15px 10px 15px 10px; }
+    table tr td:first-child {
+      font-weight: bold;
+      text-align: right !important;
+      vertical-align: top; }
 
 h1, .post-title, .post-author, .post-supervisors {
   margin-top: auto !important; }
