--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,7 +6,7 @@
 			</div>
 			<div class="col s12 m6 l6 masthead-link">
 				<p><a href="{{ site.baseurl }}/masthead.html" class="white-text"><b>Masthead</b></a><br/>
-				<a href="mailto:kawin@cs.toronto.edu" class="white-text">Contact</a></p>
+				<a href="mailto:kawin@cs.toronto.edu" class="white-text"><b>Contact</b></a></p>
 			</div>
 		</div>
 	</div>
