--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,11 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=YES" />
 
-  <title>RUCS - Review of Undergraduate Computer Science</title>
+  <title>RUCS</title>
+
+  <!-- favicon -->
+  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
