--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,33 +1,13 @@
 {% if page.url != "/index.html" %}
 
+<div class="navbar-fixed">
 <nav class="header-background" role="navigation">
-  <div class="nav-wrapper container"><a id="logo-container" href="{{ site.baseurl }}/" class="brand-logo">{{site.title}}</a>
+  <div class="nav-wrapper valign-wrapper">
+    <a id="logo-container" href="{{ site.baseurl }}/#table-of-contents" class="brand-logo">{{site.title}}</a>
+    <ul class="left">
+      <li><a href="{{ site.baseurl }}/#table-of-contents"><i class="material-icons medium white-text cyan-hover">keyboard_arrow_left</i></a></li>
+    </ul>
   </div>
 </nav>
+</div>
 {% endif %}
-
-
-<!--
-<header class="site-header">
-
-  <div class="wrapper">
-
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-
-    <nav class="site-nav">
-      <a href="#" class="menu-icon">
-      </a>
-
-      <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
-      </div>
-    </nav>
-
-  </div>
-
-</header>
--->
