--- a/css/style.css
+++ b/css/style.css
@@ -1756,7 +1756,7 @@ dfn {
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari, and Chrome.
  */
-h1, .post-title, .post-author, .post-supervisors {
+h1 {
   font-size: 2em;
   margin: 0.67em 0; }
 
@@ -2017,7 +2017,7 @@ a {
   text-decoration: none;
   -webkit-tap-highlight-color: transparent; }
 
-.valign-wrapper {
+.valign-wrapper, .navbar-fixed .header-background .nav-wrapper ul li {
   display: -webkit-box;
   display: -moz-box;
   display: -ms-flexbox;
@@ -2027,7 +2027,7 @@ a {
   -ms-flex-align: center;
   -webkit-align-items: center;
   align-items: center; }
-  .valign-wrapper .valign {
+  .valign-wrapper .valign, .navbar-fixed .header-background .nav-wrapper ul li .valign, .navbar-fixed .header-background .nav-wrapper ul li a {
     display: block; }
 
 ul {
@@ -5444,14 +5444,14 @@ html {
     html {
       font-size: 15px; } }
 
-h1, .post-title, .post-author, .post-supervisors, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6 {
   font-weight: 400;
   line-height: 1.1; }
 
-h1 a, .post-title a, .post-author a, .post-supervisors a, h2 a, h3 a, h4 a, h5 a, h6 a {
+h1 a, h2 a, h3 a, h4 a, h5 a, h6 a {
   font-weight: inherit; }
 
-h1, .post-title, .post-author, .post-supervisors {
+h1 {
   font-size: 4.2rem;
   line-height: 110%;
   margin: 2.1rem 0 1.68rem 0; }
@@ -6075,7 +6075,7 @@ a.waves-effect .waves-ripple {
   @media only screen and (max-width: 992px) {
     .modal {
       width: 80%; } }
-  .modal h1, .modal .post-title, .modal .post-author, .modal .post-supervisors, .modal h2, .modal h3, .modal h4 {
+  .modal h1, .modal h2, .modal h3, .modal h4 {
     margin-top: 0; }
   .modal .modal-content {
     padding: 24px; }
@@ -8459,7 +8459,7 @@ figcaption {
     height: 646px;
     overflow: scroll !important; }
 
-  h1, .post-title, .post-author, .post-supervisors {
+  h1 {
     font-size: 2.92rem;
     margin-top: 4.5rem !important; }
 
@@ -8484,8 +8484,10 @@ figcaption {
     font-size: 10em;
     font-family: "Code Pro Demo"; }
 
-  .masthead-link p {
-    text-align: right; } }
+  .masthead-link {
+    align-self: flex-start; }
+    .masthead-link p {
+      text-align: left; } }
 @media only screen and (max-width: 600px) {
   .collapsible-toc {
     height: 100%;
@@ -8503,7 +8505,7 @@ figcaption {
   .preview {
     color: white; }
 
-  h1, .post-title, .post-author, .post-supervisors {
+  h1 {
     font-size: 2.28rem;
     margin-top: 4.5rem !important; }
 
@@ -8538,7 +8540,8 @@ figcaption {
 .card-content {
   height: 100%; }
   .card-content .card-title {
-    font-weight: bold;
+    font-family: "Calibri";
+    font-weight: 500;
     font-size: 1.5em;
     color: white;
     line-height: 1.5rem !important; }
@@ -8566,28 +8569,6 @@ figcaption {
 .marginless-row {
   margin: 0 !important;
   padding: 0 !important; }
-
-.post-header {
-  margin: 5rem 0 0 0;
-  text-align: center; }
-
-.post-title, .post-author, .post-supervisors {
-  font-family: "CMU Serif";
-  font-size: 3.56rem; }
-
-.post-author {
-  font-size: 1.188em !important;
-  margin: 40px 0 0 0; }
-
-.post-supervisors {
-  font-size: 1em !important;
-  font-style: italic;
-  margin: 10px 0 0 0 !important; }
-
-.post-content {
-  font-family: "CMU Serif";
-  font-size: 1.1em;
-  margin-bottom: 40px; }
 
 .no-shadow {
   box-shadow: 0 !important; }
@@ -8622,9 +8603,6 @@ figcaption {
 .toc-chapter-content {
   position: relative; }
 
-.page-footer {
-  background: url("../resources/backgroundweb.svg"); }
-
 .full-width {
   min-width: 100%; }
 
@@ -8640,6 +8618,7 @@ figcaption {
   margin: 0 auto 5% auto; }
 
 .page-footer {
+  background: url("../resources/backgroundweb.svg");
   margin: 0px !important;
   min-height: 100px;
   padding: 30px 0 30px 0 !important; }
@@ -8683,5 +8662,18 @@ figcaption {
 
 .cyan-hover:hover {
   text-shadow: 0 0 10px #0097a7; }
+
+.footer-row {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap; }
+
+.navbar-fixed .header-background .nav-wrapper ul {
+  height: 100%; }
+  .navbar-fixed .header-background .nav-wrapper ul li {
+    height: 100%; }
+.navbar-fixed .header-background .nav-wrapper .brand-logo {
+  left: 50%;
+  transform: translateX(-50%); }
 
 /*# sourceMappingURL=style.css.map */
