--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,8 +5,8 @@
   <title>RUCS</title>
 
   <!-- favicon -->
-  <link rel="shortcut icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="{{ site.baseurl }}/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="{{ site.baseurl }}/RUCS.ico" type="image/x-icon">
+  <link rel="icon" href="{{ site.baseurl }}/RUCS.ico" type="image/x-icon">
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
